# open-location-code

./: .bazeliskrc  .bazelrc  .gitignore  .travis.yml  API.txt  CHANGELOG.md  CNAME  CONTRIBUTING.md  FAQ.txt  MODULE.bazel  README  README.md  TESTING.md  WORKSPACE  index.html  package.json  params.json  run_tests.sh
Documentation/: Comparison.md  External_Implementations.md  FAQ.md  Introduction.md  Open Location Code API Specification.md  Plus Codes Specification.md  README.md  comparison.adoc
android_demo/: README.md  build.gradle  gradlew.bat
c/: .clang-format  .gitignore  BUILD  Makefile  README.md  clang_check.sh  example.c  gonzo.c  olc.c  olc.h  olc_lookup.h  olc_private.h  olc_test.c  openlocationcode_test.cc  test_csv.c  tests.h
common-lisp/: README.md
cpp/: .clang-format  BUILD  README.md  WORKSPACE  clang_check.sh  codearea.cc  codearea.h  codearea_test.cc  openlocationcode.cc  openlocationcode.h  openlocationcode_example.cc  openlocationcode_test.cc
csharp/: OpenLocationCode.sln  README.md
dart/: .gitignore  README.md  checks.sh  format_check.sh  pubspec.yaml
docs/: API.md  comparison.adoc  olc_definition.adoc  specification.md
emacs/: README.md
go/: README.md  benchmark.go  decode.go  encode.go  go.mod  olc.go  olc_gofuzz.go  olc_gofuzz_test.go  olc_test.go  shorten.go
java/: .gitignore  BUILD  README.md  checks.sh  pom.xml
js/: .eslintrc.js  .travis.yml  README  README.md  checks.sh  example1.html  example3.html  examples.js  gulpfile.js  openlocationcode.js  package.json  test.html
kotlin/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
objective-c/: README.md
plpgsql/: README.md  pluscode_functions.sql  test_encoding.sql  tests_script_l.sql  update_encoding_tests.sh
python/: .gitignore  .style.yapf  BUILD  README.md  format_check.sh  open_location_code.py  openlocationcode.py  openlocationcode_test.py  setup.py  test_encoding.py  test_short.py  test_validity.py  testpluscodes.py
ruby/: README.md  open-location-code.gemspec  rubocop.yml
rust/: Cargo.toml  README.md
rust/src/: codearea.rs  consts.rs  interface.rs  lib.rs  private.rs
rust/tests/: all_test.rs  csv_reader.rs
src/: openlocationcode.js
stylesheets/: stylesheet.css
swift/: README.md
test_data/: BUILD  csv_to_json.go  decoding.csv  encoding.csv  encodingTests.csv  shortCodeTests.csv  validityTests.csv
tile_server/: README.md  example.html  main  main.go
travis-utils/: README.md  comment_funcs.sh  comment_pr.sh  github_comments.go
typescript/: README.md
visualbasic/: OLCTests.bas  OpenLocationCode.bas  README.md  update_tests.sh
where_am_i/: README.md  index.html  location.js
whereami/: index.html  (+1 more)
(+387 files in other folders)
