module(
    name = "openlocationcode",
    version = "1.0",
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "0.40.0")
