module(
    name = "openlocationcode",
    version = "1.0",
)

# https://github.com/google/googletest
bazel_dep(name = "googletest", version = "1.15.2")
# https://github.com/bazelbuild/rules_proto
bazel_dep(name = "rules_proto", version = "7.1.0")
# https://github.com/bazelbuild/rules_java
bazel_dep(name = "rules_java", version = "8.6.3")
# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.7.1")
# https://github.com/bazelbuild/rules_python
bazel_dep(name = "rules_python", version = "1.0.0")
