[package]
name = "open-location-code"
description = "Library for translating between GPS coordinates (WGS84) and Open Location Code"
version = "0.2.0"
authors = ["James Fysh <james.fysh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/google/open-location-code"
keywords = ["geography", "geospatial", "gis", "gps", "olc"]
exclude = ["rust.iml"]
edition = "2024"

[dependencies]
geo = "0.30.0"

[dev-dependencies]
rand = "0.9.0"
